# backend/internal/models/base-model.go
@@ -1,13 +1,16 @@
 package models
 
 import (
-	"gorm.io/gorm"
 	"time"
+
+	"gorm.io/gorm"
 )
 
+// BaseModel represents the common fields for all models
+// @Description Base model with common fields
 type BaseModel struct {
-	ID        uint           `json:"id" gorm:"primarykey,autoIncrement"`
-	CreatedAt time.Time      `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `json:"deleted_at" gorm:"index"`
+	ID        uint           `json:"id" gorm:"primarykey,autoIncrement" example:"1"`
+	CreatedAt time.Time      `json:"created_at" example:"2024-01-29T17:57:19Z"`
+	UpdatedAt time.Time      `json:"updated_at" example:"2024-01-29T17:57:19Z"`
+	DeletedAt gorm.DeletedAt `json:"deleted_at,omitempty" swaggertype:"string" example:"2024-01-29T17:57:19Z"`
 }
